fixed background color bug where it doeses, also fixed spacing on mobile for navbar

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -4,7 +4,7 @@ otherwise the background of the rest of the page can't be changed
 */
 body, html{
     margin: 0;
-    height: 100%;
+    height: auto;
     display: flex;
     flex-direction: column;
 }
